--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+	<!-- to make a change 
+	git pull -> git add . -> git commit -m "..." -> git pull -> git push -->
 	<h1>this is my name : fiorella</h1>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
