--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
 </head>
 
 <body>
-	<!-- to make a change 
+	<!-- to make a change
 	git pull -> git add . -> git commit -m "..." -> git pull -> git push -->
 	<h1>this is my name : fiorella</h1>
   <h1>hi, my name is ben</h1>
   <h1>And I am Hunter...</h1>
-  <h1>hello</h1>
+  <h1>hello hi there</h1>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <p>asdoifjapdofijap</p>
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
