--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 	<!-- to make a change
 	git pull -> git add . -> git commit -m "..." -> git pull -> git push -->
 	<h1>Exquisitely Exquisite</h1>
+
+  <p>Hi all this is a test</p>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
