--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 	<!-- to make a change
 	git pull -> git add . -> git commit -m "..." -> git pull -> git push -->
-  <h1>This is where the story begins.</h1>
+  <h1 id="intro">This is where the story begins.</h1>
   <img src="img/llama.gif" width="100%"/>
   <p>Once upon a time, there was a travelling llama. His name was Cuzco. He was a very rich llama, and ruled over all of the people in a small village in Equador. He loved munching on coffee beans and yelling at the peasants in his village. One day, an evil porcupine named Eezma came to the village to strike fear into the peasant's hearts. Cuzco was faced with a dilemma. He had to either protect his peasants, or he could let them face the wrath of Eezma.</p>
 
