--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Exquisite Corpse</title>
+  <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,10 +37,16 @@
 <body>
 	<!-- to make a change
 	git pull -> git add . -> git commit -m "..." -> git pull -> git push -->
-  <h1>This is where the story begins.</h1>
-  <img src="img/llama.gif" width="100%"/>
-  <p>Once upon a time, there was a travelling llama. His name was Cuzco. He was a very rich llama, and ruled over all of the people in a small village in Equador. He loved munching on coffee beans and yelling at the peasants in his village. One day, an evil porcupine named Eezma came to the village to strike fear into the peasant's hearts. Cuzco was faced with a dilemma. He had to either protect his peasants, or he could let them face the wrath of Eezma.</p>
+	<h1>Exquisitely Exquisite</h1>
 
+  <p>Once upon a time, there was a travelling llama. His name was Cuzco. He was a very rich llama, and ruled over all of the people in a small village in Equador. He loved munching on coffee beans and yelling at the peasants in his village. One day, an evil porcupine named Eezma came to the village to strike fear into the peasant's hearts. Cuzco was faced with a dilemma. He had to either protect his peasants, or he could let them face the wrath of Eezma.</p>
+  <p>Since he didn't care much about the peasants, but he cared very much about himself, the llama was then forced to protect his empire. Eezma took control of the village and had almost taken over completely as an empress. Cuzco was locked up and forced to only look at his peasants through his embellished window, as there were no mirrors in the room he was locked in. He didn't know what to do at this point, and wanted to develop a plan.</p>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  <p>Hello world! This is HTML5 Boilerplate.</p>
 </body>
 
 </html>
