--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="icon" href="favicon.ico">
+
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
