added forth paragraph

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <p>Since he didn't care much about the peasants, but he cared very much about himself, the llama was then forced to protect his empire. Eezma took control of the village and had almost taken over completely as an empress. Cuzco was locked up and forced to only look at his peasants through his embellished window, as there were no mirrors in the room he was locked in. He didn't know what to do at this point, and wanted to develop a plan.</p>
   <img src="img/cuzcosad.jpeg" height ="50%" width="50%"/>
   <p>Unfortunately for himself, Cuzco was not the planning type.  He spent the majority of four and half days crying and feeling bad for himself in a corner.  It made all the subjects below who could hear his wailing a bit uncomfortable.  But in a stroke of luck, one of those uncomfortable subjects happened to be his only friend, Pacha.  The man, clothing as green as ever, instantly recognized the sobs of the former emperor (an all too familiar sound).  "Why the long face, pal?" he called up to the window.</p>
-  
+  <p>Pacha was a kind and loving person. He would always come help out Cuzco whenever he was in distress. Pacha was like a dad to Cuzco. Pacha loved who Cuzco was as a person. The only thing that Pacha hated about Cuzco was the coffee beans. Cuzco swore to himself that he would never drink coffee because he was scared of dying again.</p>
   
 
   <!--[if IE]>
