--- a/index.html
+++ b/index.html
@@ -46,15 +46,8 @@
   <img src="img/cuzcosad.jpeg" height ="50%" width="50%"/>
   <p>Unfortunately for himself, Cuzco was not the planning type.  He spent the majority of four and half days crying and feeling bad for himself in a corner.  It made all the subjects below who could hear his wailing a bit uncomfortable.  But in a stroke of luck, one of those uncomfortable subjects happened to be his only friend, Pacha.  The man, clothing as green as ever, instantly recognized the sobs of the former emperor (an all too familiar sound).  "Why the long face, pal?" he called up to the window.</p>
   <p>Pacha was a kind and loving person. He would always come help out Cuzco whenever he was in distress. Pacha was like a dad to Cuzco. Pacha loved who Cuzco was as a person. The only thing that Pacha hated about Cuzco was the coffee beans. Cuzco swore to himself that he would never drink coffee because he was scared of dying again.</p>
+  <p>While Pacha was working on helping Cuzco escape, Cuzco thought to himself, "This is easy, I can just avoid any coffee shops, or coffee farms! However while Cuzco was locked in, evil Eezma started her own coffee business by slaving the villagers and built coffeeshops in every single block and corner of the village.</p>
   
-
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-
 </body>
 
 </html>
