Added Hunter's second paragraph

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">   
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
 
@@ -49,7 +49,7 @@
   <p>While Pacha was working on helping Cuzco escape, Cuzco thought to himself, "This is easy, I can just avoid any coffee shops, or coffee farms! However while Cuzco was locked in, evil Eezma started her own coffee business by slaving the villagers and built coffeeshops in every single block and corner of the village.</p>
   <p>Pacha lept through the window after scaling the tower's wall, somehow remaining unnoticed. Cuzco, who was sobbing in bed until he tuckered himself out, jumped up and started hysterically shrieking for help. Once he realized it was just Pacha, he slapped him with his hoof for scaring him so much. On their daring escape, Pacha had brought clothes for Cuzco to slip into, to disguise that he was a llama and not Pacha's simple wife. Upon Cuzco's appearance into the blinding daylight, he started hysterically screeching again. Coffee beans. COFFEE BEANS EVERYWHERE. Everywhere Cuzco turned, the almighty bean was staring at him straight in the face. Collapsing in a heap, Cuzco started fading in and out of consciousness. </p>
   <p>Fortunatelly for Pacha, he did not know CPR, but one of the coffee shop's owners did, Kronk. While Kronk was bringing Cuzco back to life, Pacha was regretting helping Cuzco, why did this always happen to him. Once Cuzco woke up, he slapped Kronk because, Kronk was a rat, who wants to be kissed back to life by a rat? Not this emperor. Pacha thanked him, and apologised, but ended up having to blindfold Cuzco and cover his nose otherwise his ears would have fallen off from Cuzco's yelling.</p>
-  
+  <p>Leaving poor Kronk slapped silly, Pacha picked up Cuzco and made for the edge of the village, away from most of the coffe shops.  "What is going on?!" he asked, taking off the the covers off of the llama's head.  Cuzco explained how Eezma was trying to take everything from his AGAIN and it was really hurting his self esteem.  Pacha promised he would do his best to help save the village--and restore Cuzco's ego.</p>
 </body>
 
 </html>
