--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 </head>
 
 <body>
-  <h1 id="intro">This is where the story begins.</h1>
-  <div class="parallax" id="one"></div>
+  <div class="parallax" id="one">
+      <h1 id="intro">This is where the story begins.</h1>
+  </div>
   <!--<img src="img/llama.gif" width="100%"/>-->
   <p>Once upon a time, there was a llama. His name was Cuzco. He was a very rich llama, and ruled over all of the people in a small village in Equador. He loved munching on coffee beans and yelling at the peasants in his village. One day, an evil porcupine named Eezma came to the village to strike fear into the peasant's hearts. Cuzco was faced with a dilemma. He had to either protect his peasants, or he could let them face the wrath of Eezma.</p>
   <div class="parallax" id="two"></div>
