--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <p>In the first few months, Starbucks was a massive hit with the locals. One thing lead to another, and Pacha and Cuzco were able to turn their humble cafe into a global chain. Cuzco's ego mattered no more, as he had something only a few llamas would ever dream of; a best friend and business partner that supported his dreams.</p>
   <div class="parallax" id="eleven"></div>
   <!-- <img src="img/happycuzco.jpg" height ="50%" width="50%"/> -->
+  <p> - THE END- </p>
   <br>
   <br>
 
