--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <p>In the first few months, Starbucks was a massive hit with the locals. One thing lead to another, and Pacha and Cuzco were able to turn their humble cafe into a global chain. Cuzco's ego mattered no more, as he had something only a few llamas would ever dream of; a best friend and business partner that supported his dreams.</p>
   <div class="parallax" id="eleven"></div>
   <!-- <img src="img/happycuzco.jpg" height ="50%" width="50%"/> -->
-  <p> - THE END- </p>
+  <p style="padding-bottom: 250px;"> - THE END- </p>
 
   <!--<p>Cuzco sat in his office which was located on the 87th floor of their Starbucks mega-building. He flipped through his wads of cash and coffee beans until he was interupted by a knock on his solid gold doors. "Come in, and don't foget to wipe your feet", mumbled Cuzco. Pacha strutted inside, his gold poncho flowing behind him. "I've got some bad news Cuzco...Remember Yeezma?" A sour taste developed in Cuzcos mouth. "Yea...Sure do. Don't tell me she's up to somthin' again...?" Pacha signed as he sunk into one of the large pink cushions in the office. "Cuzco...Yeezma has gained the support of our workers that farm our coffee beans. They're set to put on a protest in the main city next week."
   </p>-->
